# chameleon

./: .env.example  .gitignore  README.md  bookings.csv  chassis.csv  drivers.csv  locations.csv  meson.build  pyproject.toml  requirements.txt  routes.csv  schedules.csv  transports.csv  truck_starts.csv  trucks.csv
cpp/include/schedule/: common.hpp  schedule.hpp  truck_schedule.hpp
cpp/src/schedule/: bindings.cpp  common.cpp  meson.build  schedule.cpp  truck_schedule.cpp
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/schedule/: common_types.rs  counter_mapper.rs  driving_times_cache.rs  intervals.rs  mod.rs  schedule.rs
src/api/: SquidAPI.py  __init__.py
src/chameleon/: __init__.py
src/metaheuristic/: __init__.py  aco.py  constants.py  ga.py  intervals.py  neighbours.py  sa.py  schedule.py  transition.py  ts.py  unoccupied_windows.py
src/multiagent/: CoCoASolver.py  Container.py  Graph.py  MultiMain.py  TruckDriver.py  __init__.py  multiMain.py  multiMain2.py  multiMain3.py  multiMain4.py
src/tests/: test_all.py
test/: test_api.py  test_metaheuristic.py  test_metaheuristic_b.py  test_rl.py  utilitycalc.py
test/test_metaheuristic/: test_intervals.py
