[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = 'chameleon'
version = '1.0.0'
description = 'Application to plan container delivery'
readme = 'README.md'

# [project.scripts]
# example = 'example.cli:main'
[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "test",
]
