[package]
name = "chameleon_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chameleon_rust"
crate-type = ["cdylib"]
# rustflags = [
#   "-C", "link-args=-Wl,--no-gc-sections",
# ]

[dependencies]
pyo3 = "0.24.0"
rand = "0.9.0"
rand_xoshiro = "0.7.0"
